# bm-elc-migration

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
amf/core/: main.py
artifacts/configs/: config.yml
artifacts/dags/: test_file.py
artifacts/dbt/: test_sql.sql
artifacts/jobs/: job.yml
