[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amf"
version = "0.0.0"
description = "Automated Migration Framework — agent-driven data pipeline automation"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "requests>=2.31",
    "pyarrow>=15.0",
    "certifi>=2024.0",
]

[project.optional-dependencies]
cluster = [
    "dlt[bigquery,filesystem]>=1.4",
    "databricks-sdk>=0.28",
    "google-cloud-bigquery>=3.0",
    "google-cloud-bigquery-storage>=2.0",
]
agents = [
    "anthropic>=0.52",
    "pydantic-ai-slim[anthropic]>=1.100",
    "duckdb>=1.5.3",
]
dbt = [
    "dbt-bigquery>=1.8",
]
dashboard = [
    "streamlit>=1.45",
    "duckdb>=1.5.3",
]
full = [
    "amf[cluster,agents,dbt,dashboard]",
    "mashumaro>=3.15",
    "databricks-sql-connector>=3.0.0",
    "adal>=1.2",
    "boto3>=1.41.5",
]
dev = [
    "amf[full]",
    "ruff",
    "pytest",
]

[project.scripts]
amf-pipeline = "amf.core.entry:main"

[tool.ruff]
line-length = 100
exclude = ["reference/", "source_repo/", "tests/pbi_smoke/"]

[tool.setuptools.packages.find]
include = ["amf.core*", "amf.models*"]

[tool.setuptools.package-data]
"*" = ["**/*.yaml", "**/*.json", "**/*.dax"]

[tool.setuptools.data-files]
"configs" = ["configs/**/*.yaml", "configs/**/*.py"]
